CriarContatos.Api/k8s/producer-criar-contatos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-criar-contatos-deployment
  labels:
    app: producer-criar-contatos
    tier: backend
    environment: production
  annotations:
    description: "Microsserviço responsável por criar contatos"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer-criar-contatos
  template:
    metadata:
      labels:
        app: producer-criar-contatos
        tier: backend
        environment: production
      annotations:
        description: "Pod do microsserviço producer-criar-contatos"
    spec:
      containers:
        - name: producer-criar-contatos
          image: containerfiap.azurecr.io/producer-criar-contatos:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: producer-criar-contatos-volume
              mountPath: /app/logs/producer/producer-criar-contatos
          readinessProbe:
            httpGet:
              path: /criar/contato/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /criar/contato/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
      imagePullSecrets:
        - name: acr-auth
      volumes:
        - name: producer-criar-contatos-volume
          persistentVolumeClaim:
            claimName: producer-criar-contatos-persistent-volume-claim
