CriarContatos.Api/k8s/criar-contatos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: criar-contatos-service
  labels:
    app: criar-contatos
    tier: backend
    environment: production
  annotations:
    description: "Service para expor o microsserviço criar-contatos"
spec:
  type: LoadBalancer
  selector:
    app: criar-contatos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
