CriarContatos.Api/k8s/producer-criar-contatos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: producer-criar-contatos-service
  labels:
    app: producer-criar-contatos
    tier: backend
    environment: production
  annotations:
    description: "Service para expor o microsserviço producer-criar-contatos"
    prometheus.io/scrape: "true"
    prometheus.io/path: "/criar/contato/metrics"
    prometheus.io/port: "80"
spec:
  type: LoadBalancer
  selector:
    app: producer-criar-contatos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
