CriarContatos.Api/k8s/producer-criar-contatos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-criar-contatos-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /criar/contato
        pathType: Prefix
        backend:
          service:
            name: producer-criar-contatos-service
            port:
              number: 80
      - path: /criar/contato/health
        pathType: Prefix
        backend:
          service:
            name: producer-criar-contatos-service
            port:
              number: 80
